# memcrc

./: README.md  kpatch
src/: CMakeLists.txt  Makefile  build.sh  mod_main.c  symbols.h
src/control/: control.c  control.h
src/data/: kstring.c  kstring.h  parser.c  parser.h  shared_data.c  shared_data.h
src/feature/: feature.c  feature.h
src/komm/: komm.c  komm.h
src/ptrace/: ptrace_hide.c  ptrace_hide.h
src/redirect/: redirect.c  redirect.h
